fix: resolve overflow bug (#174)

--- a/src/assets/styles/web.css
+++ b/src/assets/styles/web.css
@@ -1542,19 +1542,3 @@ li img.print {
         text-indent: -62px;
     }
 }
-
-@media (width >= 60rem) {
-    .factors-list {
-        columns: 2;
-    }
-
-    .yes-maybe-no li svg {
-        height: 42px;
-        width: 42px;
-    }
-
-    .yes-maybe-no li {
-        margin-left: 62px;
-        text-indent: -62px;
-    }
-}
